package edu.fiuba.algo3.modelo.Entidad.Suministro;

public interface AfectaSuministro {
    int afectarSuministro(int suministroActual);
}
