@startuml
skinparam classAttributeIconSize 0
class Consumidor {
- int suministroAConsumir
+ <<Create>> Consumidor(int)
+ int afectarSuministro(int)
}
interface AfectaSuministro {
~ int afectarSuministro(int)
}
class NoAfecta {
+ int afectarSuministro(int)
}
class Proveedor {
+ int afectarSuministro(int)
}


AfectaSuministro <|.. Consumidor
AfectaSuministro <|.. NoAfecta
AfectaSuministro <|.. Proveedor
@enduml